--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/DevEnv.DevEnv
+GameDefaultMap=/Game/Map/Devenv.Devenv
 GlobalDefaultGameMode=/Game/GameMode/BP_MyGameMode.BP_MyGameMode_C
-EditorStartupMap=/Game/DevEnv.DevEnv
+EditorStartupMap=/Game/Map/Devenv.Devenv
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
